--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,7 @@ on delete cascade
 applied jobs
 vacancies available
 
+update job me role me dropdown
 record saved
 jif konsa part kb  
 error handling user already exists ...
